--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node dotenv/config  src/index.js"
+    "dev": "nodemon -r dotenv/config  src/index.js"
   },
   "keywords": [],
   "author": "",
